--- a/admin/views/index.html
+++ b/admin/views/index.html
@@ -23,7 +23,7 @@
   <div class="container">
     <header>
       <nav class="phoneNav container navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Toyshop Admin</a>
+        <a class="navbar-brand" href="#">CyberPhone Admin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#phoneNavbar"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon">
